put fixed.
delete added
